# PytestEnv

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/linked_lists/: linked.py
src/value_gen/: values.py
tests/: test_linked.py
