[metadata]
name = pytest environment playground
description = testing basic data structures
author = AG
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages=find:
  
python_requires = 
    >=3.9
package_dir =
    =src
zip_safe = no


[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=7.1.2
    pytest-cov>=3.0
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1

[options.package_data]
linked_lists = py.typed
value_gen = py.typed

[flake8]
max-line-length = 160